--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
     package="com.example.semesterproject">
 
     <supports-screens
+        android:anyDensity="true"
         android:largeScreens="true"
         android:normalScreens="true"
+        android:resizeable="true"
         android:smallScreens="true"
-        android:xlargeScreens="true"
-        android:anyDensity="true"
-        android:resizeable="true" />
+        android:xlargeScreens="true" />
 
     <application
         android:allowBackup="true"
@@ -18,8 +18,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity_science_content"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+        <activity android:name=".ScienceOS2content"></activity>
+        <activity android:name=".ScienceOS1content" />
+        <activity android:name=".ScienceMatterContent" />
+        <activity
+            android:name=".activity_science_content"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
 
         <service
             android:name=".MusicService"
@@ -28,20 +32,20 @@
         <activity
             android:name=".MathNN2"
             android:screenOrientation="portrait"
-            tools:ignore="DuplicateActivity"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme"
+            tools:ignore="DuplicateActivity" />
         <activity
             android:name=".MathPNx"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPN4"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathAR3"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".RateContentPage"
             android:screenOrientation="portrait"
@@ -49,51 +53,51 @@
         <activity
             android:name=".MathPropNumContentPage"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPN3"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPN2"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPN1"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPropN3Quiz"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPropN2Quiz"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPropN1Quiz"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathNNQuiz3"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathNNQuiz2"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathNNQuiz1"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathNN3"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathNN1"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathNegNumContentPage"
             android:screenOrientation="portrait"
@@ -101,39 +105,39 @@
         <activity
             android:name=".MathAR2"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathAR1"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathARQuiz3"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathARQuiz2"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathARQuiz1"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathArithOperationContentPage"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathPercentageContent"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathQuizPercentage"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathRateQuiz"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".RatioContentPage"
             android:label="@string/title_activity_ratio_content_page"
@@ -147,15 +151,15 @@
         <activity
             android:name=".MathRatioQuiz1"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".MathRatioPage"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:screenOrientation="portrait">
-
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
