--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -11,234 +11,157 @@
         android:anyDensity="true"
         android:resizeable="true" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="Fun Edu"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <service
-            android:name=".MusicService"
-            android:enabled="true" />
-        <activity android:name=".activity_science_os1_quiz_skeletal_system"></activity>
-        <activity android:name=".activity_science_os1_quiz_muscular_system" />
-        <activity android:name=".activity_science_os1_quiz_digestive_system" />
-        <activity android:name=".activity_science_os2_quiz_excretory_system" />
-        <activity android:name=".activity_science_os2_quiz_respiratory_system" />
-        <activity android:name=".activity_science_os2_quiz_nervous_system" />
-        <activity android:name=".activity_science_os2_quiz_circulatory_system" />
-        <activity
-            android:name=".activity_science_os2_excretory_system"
-            android:label="@string/title_activity_science_os2_excretory_system"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".activity_science_os2_respiratory_system"
-            android:label="@string/title_activity_science_os2_respiratory_system"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".activity_science_os2_nervous_system"
-            android:label="@string/title_activity_science_os2_nervous_system"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".activity_science_os2_circulatory_system"
-            android:label="@string/title_activity_science_os2_circulatory_system"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".activity_science_os1_digestive_system"
-            android:label="@string/title_activity_science_os1_digestive_system"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".activity_science_os1_skeletal_system"
-            android:label="@string/title_activity_science_os1_skeletal_system"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".activity_science_os1_muscular_system"
-            android:label="@string/title_activity_science_os1_muscular_system"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity android:name=".activity_science_matter_quiz_gases"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity_science_matter_quiz_liquids"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity_science_matter_quiz_solids"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".activity_science_matter_gases"
-            android:label="@string/title_activity_science_matter_gases"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".activity_science_matter_liquids"
-            android:label="@string/title_activity_science_matter_liquids"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".activity_science_matter_solids"
-            android:label="@string/title_activity_science_matter_solids"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity_science_OS2_content"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity_science_OS1_content"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity_science_matter_content"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity_science_content"
-            android:theme="@style/AppTheme.SlideActivityTheme"
-            android:screenOrientation="portrait"/>
-
-
-
-        <activity
-            android:name=".MathNN2"
-            android:screenOrientation="portrait"
-            tools:ignore="DuplicateActivity"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPNx"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPN4"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathAR3"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".RateContentPage"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".MathPropNumContentPage"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPN3"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPN2"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPN1"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPropN3Quiz"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPropN2Quiz"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPropN1Quiz"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathNNQuiz3"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathNNQuiz2"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathNNQuiz1"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathNN3"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathNN1"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathNegNumContentPage"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".MathAR2"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathAR1"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathARQuiz3"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathARQuiz2"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathARQuiz1"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathArithOperationContentPage"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathPercentageContent"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathQuizPercentage"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathRateQuiz"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".RatioContentPage"
-            android:label="@string/title_activity_ratio_content_page"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".MathContentActivity"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity
-            android:name=".MathRatioQuiz1"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme"/>
-        <activity
-            android:name=".MathRatioPage"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.SlideActivityTheme" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:screenOrientation="portrait">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-
+        <application
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="Fun Edu"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+                <activity android:name=".ScienceOS2content"></activity>
+                <activity android:name=".ScienceOS1content" />
+                <activity android:name=".ScienceMatterContent" />
+                <activity
+                    android:name=".activity_science_content"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <service
+                    android:name=".MusicService"
+                    android:enabled="true" />
+                <activity
+                    android:name=".MathNN2"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme"
+                    tools:ignore="DuplicateActivity" />
+                <activity
+                    android:name=".MathPNx"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPN4"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathAR3"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".RateContentPage"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPropNumContentPage"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPN3"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPN2"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPN1"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPropN3Quiz"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPropN2Quiz"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPropN1Quiz"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathNNQuiz3"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathNNQuiz2"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathNNQuiz1"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathNN3"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathNN1"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathNegNumContentPage"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathAR2"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathAR1"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathARQuiz3"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathARQuiz2"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathARQuiz1"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathArithOperationContentPage"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathPercentageContent"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathQuizPercentage"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathRateQuiz"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".RatioContentPage"
+                    android:label="@string/title_activity_ratio_content_page"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathContentActivity"
+                    android:parentActivityName=".MainActivity"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathRatioQuiz1"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MathRatioPage"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/AppTheme.SlideActivityTheme" />
+                <activity
+                    android:name=".MainActivity"
+                    android:screenOrientation="portrait"
+                    android:theme="@style/Theme.AppCompat.NoActionBar">
+                        <intent-filter>
+                                <action android:name="android.intent.action.MAIN" />
+                                <category android:name="android.intent.category.LAUNCHER" />
+                        </intent-filter>
+                </activity>
+        </application>
 </manifest>
