--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -18,8 +18,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScienceOS1RespiratorySystem"></activity>
-        <activity android:name=".ScienceOS1NervousSystem" />
+        <activity android:name=".ScienceQuizMatterStates"></activity>
+        <activity android:name=".ScienceMatterChanges2" />
+        <activity android:name=".ScienceMatterChanges1" />
+        <activity android:name=".ScienceMatterStates" />
+        <activity android:name=".ScienceOs2Muscularsystem" />
+        <activity android:name=".ScienceOs2Skeletalsystem" />
+        <activity android:name=".ScienceOs2Digestivesystem" />
+        <activity android:name=".ScienceOs2Content" />
+        <activity android:name=".ScienceOs1Circulatorysystem" />
+        <activity android:name=".ScienceOs1Excretorysystem" />
+        <activity android:name=".ScienceOs1Respiratorysystem" />
+        <activity android:name=".ScienceOs1Nervoussystem" />
+        <activity android:name=".ScienceOs1Content" />
         <activity android:name=".ScienceOS2content" />
         <activity android:name=".ScienceOS1content" />
         <activity android:name=".ScienceMatterContent" />
