--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -18,22 +18,57 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScienceQuizMatterStates"></activity>
-        <activity android:name=".ScienceMatterChanges2" />
-        <activity android:name=".ScienceMatterChanges1" />
-        <activity android:name=".ScienceMatterStates" />
-        <activity android:name=".ScienceOs2Muscularsystem" />
-        <activity android:name=".ScienceOs2Skeletalsystem" />
-        <activity android:name=".ScienceOs2Digestivesystem" />
-        <activity android:name=".ScienceOs2Content" />
-        <activity android:name=".ScienceOs1Circulatorysystem" />
-        <activity android:name=".ScienceOs1Excretorysystem" />
-        <activity android:name=".ScienceOs1Respiratorysystem" />
-        <activity android:name=".ScienceOs1Nervoussystem" />
-        <activity android:name=".ScienceOs1Content" />
-        <activity android:name=".ScienceOS2content" />
-        <activity android:name=".ScienceOS1content" />
-        <activity android:name=".ScienceMatterContent" />
+        <activity android:name=".ScienceQuizOS1Circulatory"></activity>
+        <activity android:name=".SienceQuizOS1Excretory" />
+        <activity android:name=".ScienceQuizOS1Respiratory" />
+        <activity android:name=".ScienceQuizOS1Nervous" />
+        <activity android:name=".ScienceQuizOS2Muscular" />
+        <activity android:name=".ScienceQuizOS2Skeletal" />
+        <activity android:name=".ScienceQuizChangesMatter2" />
+        <activity android:name=".ScienceQuizChangesMatter1" />
+        <activity android:name=".ScienceQuizOS2Digestive" />
+        <activity
+            android:name=".ScienceQuizMatterStates"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceMatterChanges2"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceMatterChanges1"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceMatterStates"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs2Muscularsystem"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs2Skeletalsystem"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs2Digestivesystem"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs2Content"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs1Circulatorysystem"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs1Excretorysystem"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs1Respiratorysystem"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs1Nervoussystem"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceOs1Content"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
+        <activity
+            android:name=".ScienceMatterContent"
+            android:theme="@style/AppTheme.SlideActivityTheme" />
         <activity
             android:name=".activity_science_content"
             android:theme="@style/AppTheme.SlideActivityTheme" />
